# live-bootcamp-project

./: compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-5f5422d8a0187c0c9b0da315d50fad7ac4376ea6b61b5e5ff5c47728ff077023.json  query-ca8fa38a825e18523bdf117344cb5ae1110c02aa7714d87e388f87086826f1e6.json
auth-service/migrations/: 20251107013025_create_user_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/domain/: data_store.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/services/data_store/: mod.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
