[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12.1"
validator = "0.16.1"

[dev-dependencies]
fake = "2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
